# satoyamacoffee-accounting

./: .env.example  .gitignore  CLAUDE.md  README.md  README_auto_keiri.md  README_vendor_invoice.md  pyproject.toml  rule_candidates.csv  rule_candidates.csv.bak
accounting/: cli.py  config.py
accounting/connectors/: anthropic_classifier.py  anthropic_vision.py  attendance.py  coffee_system.py  freee.py  gmail.py  hrmos.py  shifts.py  shopify.py
accounting/core/: auto_keiri.py  db.py  dry_run.py  extractions.py  freee_auth.py  gmail_auth.py  idempotency.py  inventory_valuations.py  logger.py  notifier.py  report.py  vendor_invoice_candidates.py
accounting/tasks/: dept_store_invoice.py  inventory_valuation.py  journal_rules.py  payroll.py  ping.py  sync_hrmos_to_shifts.py
accounting/tasks/ar_reconcile/: __init__.py  cli.py  excluder.py  (+4 more)
accounting/web/: app.py  auth.py  server.py
samples/: com.satoyamacoffee.accounting-serve.plist  com.satoyamacoffee.sync-hrmos.plist
scripts/: filter_rule_candidates.py  run_weekly_auto_keiri.sh
tests/: test_ar_reconcile.py  test_auto_classify.py  test_connector_hrmos.py  test_connector_shifts.py  test_connector_shopify.py  test_dept_store_invoice.py  test_email_digest.py  test_freee_auth.py  test_idempotency.py  test_inventory_valuation.py  test_journal_rules.py  test_payroll.py  test_shopify_sales_aggregator.py  test_shopify_sales_filters.py  test_shopify_sales_freee_writer.py  test_shopify_sales_partner_map.py  test_sync_hrmos_to_shifts.py  test_vendor_invoice.py  test_web.py
tests/fixtures/: shopify_orders_2026-04.json
(+58 files in other folders)
