[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satoyamacoffee-accounting"
version = "0.1.0"
description = "Monthly accounting automation hub for Satoyama Coffee (Akita Satoyama Design LLC)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "resend>=2.4",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "anthropic>=0.40",
    "Pillow>=10.0",
    "pillow-heif>=0.16",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "qrcode>=7.4",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
accounting = "accounting.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["accounting*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
